Mon Jun  7 20:57:41 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/Bug_3853_Regression.mpc:
        
          Added avoids_minimum_corba, avoids_corba_e_compact, and
          avoids_corba_e_micro. 

Mon Jun  7 16:48:20 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/Bug_3853_Regression/Client_ORBInitializer.h:
        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/client_interceptor.h:
        * tests/Bug_3853_Regression/client_interceptor.cpp:

          Fixed fuzz errors.

Mon Jun  7 08:54:31 UTC 2010  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * orbsvcs/orbsvcs/PortableGroup/PortableGroup_Loader.cpp:
          Fixed a memory leak. PortableGroup library doesn't need to init
          required services as it's responsibility of ACE to do so once a
          service is created.

        * orbsvcs/tests/Miop/McastHello/svc.conf:
          Fixed the test so that in dynamic builds required services from
          svc.conf are loaded as needed.

Mon Jun  7 01:23:51 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tao/Remote_Invocation.cpp:

          Fixed Bugzilla #3853.

        * tests/Bug_3853_Regression/Bug_3853_Regression.mpc:
        * tests/Bug_3853_Regression/Client_ORBInitializer.h:
        * tests/Bug_3853_Regression/Client_ORBInitializer.cpp:
        * tests/Bug_3853_Regression/Hello.idl:
        * tests/Bug_3853_Regression/Hello_i.h:
        * tests/Bug_3853_Regression/Hello_i.cpp:
        * tests/Bug_3853_Regression/client.cpp:
        * tests/Bug_3853_Regression/client_interceptor.h:
        * tests/Bug_3853_Regression/client_interceptor.cpp:
        * tests/Bug_3853_Regression/run_test.pl:
        * tests/Bug_3853_Regression/server.cpp:

          Added regression test.

        * bin/tao_orb_tests.lst:

          Added Bug_3853_Regression test.
